# z_programowanie

./: links.py  main.py  movies.py  pyproject.toml  ratings.py  tags.py  zad_1.py  zad_2.py  zad_2a.py  zad_2b_i.py  zad_2b_ii.py  zad_2c.py  zad_2d.py  zad_3.py  zad_4.py  zad_5.py  zad_6.py
Lab2/: zad_2a.py  zad_2b_i.py  zad_2b_ii.py  zad_2c.py  zad_2d.py
Lab3/: zad_1.py  zad_2.py  zad_3.py  zad_4.py  zad_5.py  zad_6.py
lab4/: zad_1.py  zad_2.py  zad_3.py
people_detector/: __init__.py  app.py
