[tool.poetry]
name = "people_detector"
version = "0.1.0"
description = "Detect people from given images"
authors = ["Katarzyna Adamczyk"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pathlib = "^1.0.1"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
